# advent_of_code_2021_rs

./: Cargo.toml  README.md  notes_24  notes_for_19
notes/: day_17-2.md  day_17.md  day_24.md
src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_24.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs  utils.rs
