[package]
name = "advent_of_code_2021"
version = "0.1.0"
authors = ["Louis Chan <louisch@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ndarray = "0.15.4"
num-traits = "0.2.14"
petgraph = "0.6.0"
bitvec = "0.22.3"
